# secretstash

./: CONTRIBUTING.md  Cargo.toml  README.md  RELEASENOTES.md  justfile  release.sh
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
secretstash/: Cargo.toml  README.md
secretstash-cli/: Cargo.toml  README.md
secretstash-cli/src/: cli.rs  main.rs
secretstash/src/: clipboard.rs  config.rs  crypto.rs  db.rs  keychain.rs  lib.rs  session.rs
secretstash/src/commands/: add.rs  auth.rs  browser.rs  copy.rs  edit.rs  export.rs  history.rs  import.rs  list.rs  migrate.rs  mod.rs  purge.rs  rename.rs  restore.rs  search.rs  show.rs  tag.rs  tags.rs  web.rs
src/: cli.rs  config.rs  crypto.rs  db.rs  keychain.rs  main.rs  session.rs
src/commands/: add.rs  auth.rs  browser.rs  copy.rs  edit.rs  export.rs  find.rs  history.rs  import.rs  list.rs  migrate.rs  mod.rs  purge.rs  rename.rs  restore.rs  show.rs  tag.rs  web.rs
stash-cli/: Cargo.toml
stash-cli/src/: main.rs
stash-lib/: Cargo.toml
stash-lib/src/: clipboard.rs  db.rs  session.rs
stash-lib/src/commands/: add.rs  auth.rs  edit.rs  purge.rs  show.rs  tag.rs
stashvault/: Cargo.toml
stashvault-cli/: Cargo.toml
stashvault-cli/src/: cli.rs  main.rs
stashvault/src/: keychain.rs  lib.rs
stashvault/src/commands/: mod.rs
