[package]
name = "stash"
version = "1.0.1"
edition = "2024"

[[bin]]
name = "stash"
path = "src/main.rs"

[dependencies]
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "6"
open = "5"
rand_core = { version = "0.9", features = ["os_rng"] }
rpassword = "7"
rusqlite = { version = "0.40", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = "0.8"
zeroize = "1"
