[package]
name = "secretstash-cli"
version = "2.0.1"
edition = "2024"
description = "Encrypted command-line manager for notes, URLs, and secrets"
license = "MIT"
repository = "https://github.com/ljantzen/secretstash"
readme = "README.md"

[[bin]]
name = "stash"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
secretstash = { path = "../secretstash", version = "2.0.1" }
