[package]
name = "secretstash"
version = "1.1.0"
edition = "2024"
description = "Core library for secretstash — encrypted local storage for notes, URLs, and secrets"
license = "MIT"
repository = "https://github.com/ljantzen/secretstash"
readme = "README.md"

[dependencies]
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.11"
chrono = "0.4"
dirs = "6"
open = "5"
rand_core = { version = "0.9", features = ["os_rng"] }
regex = "1"
rpassword = "7"
rusqlite = { version = "0.40", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "1.1"
zeroize = "1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
